@@ -17,6 +17,8 @@ offline-time-counting: true
 enable-penalty: true
 #How much time to be added to that player as penalty? (minutes)
 penalty-time: 10
+#Allow players to bail using money?
+allow-bail: true
 #How much money per second a player has to pay to bail?
 bail-per-second: 100
 #OPs can't be jailed?
@@ -32,4 +34,4 @@ scheduled-update-checker-interval: 45
 
 ### Config updater ###
 #Do not modify this, otherwise plugin may not work properly
-v: Pre-alpha0.8.0
+v: Pre-alpha0.8.2
